src/test/resources/repos/invalid-binary-desc-subjects/408/170/a35/408170a3501db93228c14e2e84a51c2df6a03ac1063e85b6ec6ceee89deb527b/v2/content/binary-valid~fcr-desc.nt
<info:fedora/binary-valid> <http://purl.org/dc/elements/1.1/title> "Binary valid" .
